name:                brandons-snake-game
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brandon Van Slyke
maintainer:          brandon.vanslyke@icloud.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable snake
  main-is:             Main.hs

  ghc-options:
    -threaded -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3

  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6,
                       random >= 1.0,
                       gloss == 1.8.*
  -- hs-source-dirs:      
  default-language:    Haskell2010
